parser/src/snapshots/parser__parser__tests__addition.snap
---
source: parser/src/parser.rs
assertion_line: 272
expression: r
---
(
    Some(
        File {
            name: "parser__parser__tests",
            items: [
                FnDecl(
                    FnDecl {
                        name: "main",
                        params: [],
                        ret_ty: None,
                        span: 0..2,
                        body: [
                            Expr(
                                BinOp(
                                    BinOp {
                                        kind: Add,
                                        lhs: Literal(
                                            Integer(
                                                1,
                                                12..13,
                                            ),
                                        ),
                                        rhs: Literal(
                                            Integer(
                                                4,
                                                16..17,
                                            ),
                                        ),
                                        span: 0..0,
                                    },
                                ),
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
    [],
)
