parser/src/snapshots/parser__parser__tests__expression.snap
---
source: parser/src/parser.rs
expression: r
---
(
    Some(
        File {
            name: "parser__parser__tests",
            items: [
                FnDecl(
                    FnDecl {
                        name: "main",
                        params: [],
                        ret_ty: None,
                        id: NodeId(
                            12,
                        ),
                        span: 0..32,
                        body: [
                            Expr(
                                Expr {
                                    kind: BinOp(
                                        BinOp {
                                            kind: Add,
                                            lhs: Expr {
                                                kind: BinOp(
                                                    BinOp {
                                                        kind: Div,
                                                        lhs: Expr {
                                                            kind: Literal(
                                                                Integer(
                                                                    4,
                                                                    13..14,
                                                                ),
                                                            ),
                                                            id: NodeId(
                                                                6,
                                                            ),
                                                            span: 13..14,
                                                        },
                                                        rhs: Expr {
                                                            kind: Call(
                                                                Call {
                                                                    callee: Expr {
                                                                        kind: Name(
                                                                            "hallo",
                                                                        ),
                                                                        id: NodeId(
                                                                            7,
                                                                        ),
                                                                        span: 17..22,
                                                                    },
                                                                    args: [],
                                                                },
                                                            ),
                                                            id: NodeId(
                                                                8,
                                                            ),
                                                            span: 17..22,
                                                        },
                                                        span: 13..22,
                                                    },
                                                ),
                                                id: NodeId(
                                                    9,
                                                ),
                                                span: 13..22,
                                            },
                                            rhs: Expr {
                                                kind: Literal(
                                                    Integer(
                                                        5,
                                                        28..29,
                                                    ),
                                                ),
                                                id: NodeId(
                                                    10,
                                                ),
                                                span: 28..29,
                                            },
                                            span: 13..29,
                                        },
                                    ),
                                    id: NodeId(
                                        11,
                                    ),
                                    span: 13..29,
                                },
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
    [],
)
