parser/src/snapshots/parser__parser__tests__function.snap
---
source: parser/src/parser.rs
assertion_line: 344
expression: r
---
(
    Some(
        File {
            name: "parser__parser__tests",
            items: [
                FnDecl(
                    FnDecl {
                        name: "foo",
                        params: [],
                        ret_ty: Some(
                            Ty {
                                span: 12..15,
                                kind: U64,
                            },
                        ),
                        span: 0..26,
                        body: [
                            Expr(
                                BinOp(
                                    BinOp {
                                        kind: Add,
                                        lhs: Literal(
                                            Integer(
                                                1,
                                                18..19,
                                            ),
                                        ),
                                        rhs: Literal(
                                            Integer(
                                                5,
                                                22..23,
                                            ),
                                        ),
                                        span: 0..0,
                                    },
                                ),
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
    [],
)
