parser/src/snapshots/parser__parser__tests__struct_.snap
---
source: parser/src/parser.rs
assertion_line: 302
expression: r
---
(
    Some(
        File {
            name: "parser__parser__tests",
            items: [
                StructDecl(
                    StructDecl {
                        name: "X",
                        fields: [
                            NameTyPair {
                                name: "y",
                                ty: Ty {
                                    span: 14..17,
                                    kind: U64,
                                },
                                span: 11..17,
                            },
                            NameTyPair {
                                name: "x",
                                ty: Ty {
                                    span: 22..25,
                                    kind: U64,
                                },
                                span: 19..25,
                            },
                        ],
                        span: 0..0,
                    },
                ),
            ],
        },
    ),
    [],
)
