parser/src/snapshots/parser__parser__tests__types.snap
---
source: parser/src/parser.rs
expression: r
---
(
    Some(
        File {
            name: "parser__parser__tests",
            items: [
                FnDecl(
                    FnDecl {
                        name: "types",
                        params: [],
                        ret_ty: Some(
                            Ty {
                                span: 14..21,
                                kind: Ptr(
                                    Ty {
                                        span: 18..21,
                                        kind: U64,
                                    },
                                ),
                            },
                        ),
                        span: 0..58,
                        body: [
                            VarDecl(
                                VarDecl {
                                    name: "test",
                                    ty: Ty {
                                        span: 24..28,
                                        kind: Name(
                                            "Test",
                                        ),
                                    },
                                    rhs: Some(
                                        Literal(
                                            Integer(
                                                2,
                                                36..37,
                                            ),
                                        ),
                                    ),
                                    span: 0..0,
                                },
                            ),
                            VarDecl(
                                VarDecl {
                                    name: "int",
                                    ty: Ty {
                                        span: 39..46,
                                        kind: Ptr(
                                            Ty {
                                                span: 43..46,
                                                kind: U64,
                                            },
                                        ),
                                    },
                                    rhs: Some(
                                        Literal(
                                            Integer(
                                                25,
                                                53..55,
                                            ),
                                        ),
                                    ),
                                    span: 0..0,
                                },
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
    [],
)
