parser/src/snapshots/parser__parser__tests__unary.snap
---
source: parser/src/parser.rs
expression: r
---
(
    Some(
        File {
            name: "parser__parser__tests",
            items: [
                FnDecl(
                    FnDecl {
                        name: "main",
                        params: [],
                        ret_ty: None,
                        id: NodeId(
                            28,
                        ),
                        span: 0..63,
                        body: [
                            Expr(
                                Expr {
                                    kind: UnaryOp(
                                        UnaryOp {
                                            expr: Expr {
                                                kind: UnaryOp(
                                                    UnaryOp {
                                                        expr: Expr {
                                                            kind: Literal(
                                                                Integer(
                                                                    5,
                                                                    19..20,
                                                                ),
                                                            ),
                                                            id: NodeId(
                                                                3,
                                                            ),
                                                            span: 19..20,
                                                        },
                                                        kind: Deref,
                                                        span: 19..20,
                                                    },
                                                ),
                                                id: NodeId(
                                                    4,
                                                ),
                                                span: 19..20,
                                            },
                                            kind: Neg,
                                            span: 19..20,
                                        },
                                    ),
                                    id: NodeId(
                                        5,
                                    ),
                                    span: 19..20,
                                },
                            ),
                            Expr(
                                Expr {
                                    kind: UnaryOp(
                                        UnaryOp {
                                            expr: Expr {
                                                kind: Literal(
                                                    Integer(
                                                        5,
                                                        28..29,
                                                    ),
                                                ),
                                                id: NodeId(
                                                    8,
                                                ),
                                                span: 28..29,
                                            },
                                            kind: AddrOf,
                                            span: 28..29,
                                        },
                                    ),
                                    id: NodeId(
                                        9,
                                    ),
                                    span: 28..29,
                                },
                            ),
                            Expr(
                                Expr {
                                    kind: BinOp(
                                        BinOp {
                                            kind: Add,
                                            lhs: Expr {
                                                kind: Literal(
                                                    Integer(
                                                        2,
                                                        35..36,
                                                    ),
                                                ),
                                                id: NodeId(
                                                    14,
                                                ),
                                                span: 35..36,
                                            },
                                            rhs: Expr {
                                                kind: UnaryOp(
                                                    UnaryOp {
                                                        expr: Expr {
                                                            kind: Literal(
                                                                Integer(
                                                                    8,
                                                                    40..41,
                                                                ),
                                                            ),
                                                            id: NodeId(
                                                                15,
                                                            ),
                                                            span: 40..41,
                                                        },
                                                        kind: AddrOf,
                                                        span: 40..41,
                                                    },
                                                ),
                                                id: NodeId(
                                                    16,
                                                ),
                                                span: 40..41,
                                            },
                                            span: 35..41,
                                        },
                                    ),
                                    id: NodeId(
                                        17,
                                    ),
                                    span: 35..41,
                                },
                            ),
                            Expr(
                                Expr {
                                    kind: BinOp(
                                        BinOp {
                                            kind: Mul,
                                            lhs: Expr {
                                                kind: UnaryOp(
                                                    UnaryOp {
                                                        expr: Expr {
                                                            kind: Literal(
                                                                Integer(
                                                                    6,
                                                                    48..49,
                                                                ),
                                                            ),
                                                            id: NodeId(
                                                                23,
                                                            ),
                                                            span: 48..49,
                                                        },
                                                        kind: Deref,
                                                        span: 48..49,
                                                    },
                                                ),
                                                id: NodeId(
                                                    24,
                                                ),
                                                span: 48..49,
                                            },
                                            rhs: Expr {
                                                kind: UnaryOp(
                                                    UnaryOp {
                                                        expr: Expr {
                                                            kind: Literal(
                                                                Integer(
                                                                    8,
                                                                    53..54,
                                                                ),
                                                            ),
                                                            id: NodeId(
                                                                25,
                                                            ),
                                                            span: 53..54,
                                                        },
                                                        kind: Deref,
                                                        span: 53..54,
                                                    },
                                                ),
                                                id: NodeId(
                                                    26,
                                                ),
                                                span: 53..54,
                                            },
                                            span: 48..54,
                                        },
                                    ),
                                    id: NodeId(
                                        27,
                                    ),
                                    span: 48..54,
                                },
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
    [],
)
