parser/src/snapshots/parser__parser__tests__while_loop.snap
---
source: parser/src/parser.rs
expression: r
---
(
    Some(
        File {
            name: "parser__parser__tests",
            items: [
                FnDecl(
                    FnDecl {
                        name: "foo",
                        params: [],
                        ret_ty: Some(
                            Ty {
                                span: 12..15,
                                kind: U64,
                            },
                        ),
                        span: 0..34,
                        body: [
                            WhileStmt(
                                WhileStmt {
                                    cond: Expr {
                                        kind: Name(
                                            "false",
                                        ),
                                        span: 24..29,
                                    },
                                    body: [],
                                    span: 18..32,
                                },
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
    [],
)
